kubernetes/website/website-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
  labels:
    name: website
spec:
  ports:
    # the port that this service should serve on
    - name: http
      port: 3000
      targetPort: 3000
  # label keys and values that must match in order to receive traffic for this service
  selector:
    name: website
  type: NodePort
